<resources>
    <string name="app_name">QuizApp</string>
    <string name="list">List</string>
    <string name="favorite">Favorite</string>
    <string name="game">Game</string>
    <string name="score">Score</string>

    <string name="tv_registration">Let\'s get acquainted</string>
    <string name="tv_registration2">Please enter your name and email</string>
    <string name="acb_registration">Registration</string>
    <string name="tv_login2">Please enter your name</string>
    <string name="et_name">Name</string>
    <string name="et_email">Email</string>
    <string name="acb_login">Continue</string>
    <string name="hello_my_friend">Hello my friend</string>

    <string name="edittext_default">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ+-.!@#$%^:{}|*()?1234567890</string>
    <string name="all_games">All games</string>
    <string name="delete_account">Delete account</string>
    <string name="log_out">Log out</string>
    <string name="clear_favorites">Clear favorites</string>
    <string name="select_category">Select category</string>
    <string name="select_the_number_of_questions">Select the number of questions</string>
    <string name="select_difficulty">Select difficulty</string>
    <string name="start_quiz">Start quiz</string>
    <string name="back">Back</string>
    <string name="the_quiz_is_completed">The quiz is completed!</string>
    <string name="play_again">Play again</string>
    <string name="save_quiz">Save quiz</string>
    <string name="save_result">Save result</string>
    <string name="results">Results</string>
    <string name="clear_results">Clear results</string>

</resources>