<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@color/deepPurple_50">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dimen_100dp"
        android:gravity="center"
        android:paddingTop="@dimen/dimen_20dp"
        android:paddingBottom="@dimen/dimen_20dp"
        android:text="@string/game"
        android:textColor="@color/teal_700"
        android:textSize="@dimen/ts_30sp"
        android:textStyle="bold"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/select_category"
        android:textColor="@color/indigo_900"
        android:textSize="@dimen/ts_23sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/categorySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/select_the_number_of_questions"
        android:textColor="@color/indigo_900"
        android:textSize="@dimen/ts_23sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/limitSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_8dp"
        android:text="@string/select_difficulty"
        android:textColor="@color/indigo_900"
        android:textSize="@dimen/ts_23sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/difficultySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_24dp" />

    <Button
        android:id="@+id/startButton"
        style="@style/Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_190dp"
        android:background="@drawable/acb_bg"
        android:padding="@dimen/dimen_12dp"
        android:text="@string/start_quiz"
        android:textSize="@dimen/ts_18sp"
        android:textStyle="bold" />

</LinearLayout>